--- a/app/src/main/res/layout/recycler_main_page.xml
+++ b/app/src/main/res/layout/recycler_main_page.xml
@@ -12,7 +12,9 @@
     android:text=""
     android:textSize="@dimen/_20sdp"
     android:textAlignment="viewStart"
-    android:textStyle="bold"
+
+    android:theme="@style/font_semi_bold"
+    style="@style/font_semi_bold"
     android:textColor="@color/black"
     android:id="@+id/name_recycler"
     android:padding="@dimen/_5sdp"
