--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,4 +9,28 @@
     <style name="Theme.GradeACE" parent="Base.Theme.GradeACE" >
         <item name="android:textColorSecondary">@color/black</item>
     </style>
+    <style name="font_regular" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:fontFamily">@font/playfairdisplay_regular</item>
+        <item name="fontFamily">@font/playfairdisplay_regular</item>
+        <item name="font">@font/playfairdisplay_regular</item>
+    </style>
+    <style name="font_bold" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:fontFamily">@font/playfairdisplay_bold</item>
+        <item name="fontFamily">@font/playfairdisplay_bold</item>
+        <item name="font">@font/playfairdisplay_bold</item>
+    </style>
+    <style name="font_semi_bold" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:fontFamily">@font/playfairdisplay_semibold</item>
+        <item name="fontFamily">@font/playfairdisplay_semibold</item>
+        <item name="font">@font/playfairdisplay_semibold</item>
+    </style>
+    <style name="font_medium" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:fontFamily">@font/playfairdisplay_medium</item>
+        <item name="fontFamily">@font/playfairdisplay_medium</item>
+        <item name="font">@font/playfairdisplay_medium</item>
+    </style>
 </resources>
