--- a/app/src/main/res/layout/activity_loading_page.xml
+++ b/app/src/main/res/layout/activity_loading_page.xml
@@ -25,7 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_400sdp"
                     app:lottie_loop="true"
-                    app:lottie_rawRes="@raw/loading_anim"
+                    app:lottie_rawRes="@raw/grade_ace_loading_anim_main_loading"
                     app:lottie_autoPlay="true"
                     android:layout_margin="@dimen/_5sdp"
                     />
