--- a/app/src/main/res/menu/agriculture_menu.xml
+++ b/app/src/main/res/menu/agriculture_menu.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item app:showAsAction="withText" android:title="@string/contact_owner" android:id="@+id/contact_owner" android:icon="@drawable/connection"/>
     <item app:showAsAction="withText" android:title="@string/logout" android:id="@+id/logout" android:icon="@drawable/logout"/>
-    <item app:showAsAction="withText" android:title="@string/refresh" android:id="@+id/refresh" android:icon="@drawable/reload"/>
     <item app:showAsAction="withText" android:title="@string/report_error" android:id="@+id/report_error" android:icon="@drawable/problem"/>
+    <item app:showAsAction="withText" android:title="@string/topper_tips" android:id="@+id/refresh" android:icon="@drawable/reload"/>
 </menu>
