--- a/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
+++ b/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
@@ -10,7 +10,7 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="@string/name"
         android:textSize="@dimen/_20sdp"
         android:textAlignment="viewStart"
         android:theme="@style/font_semi_bold"
@@ -25,7 +25,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="@string/passing_year"
         android:theme="@style/font_regular"
         style="@style/font_regular"
         android:textSize="@dimen/_14sdp"
@@ -39,7 +39,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="@string/college_name"
         android:textSize="@dimen/_14sdp"
         android:textAlignment="viewStart"
         android:theme="@style/font_regular"
@@ -53,7 +53,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="@string/message"
         android:theme="@style/font_semi_bold"
         style="@style/font_semi_bold"
         android:textSize="@dimen/_18sdp"
