--- a/app/src/main/res/layout/recycler_main_page.xml
+++ b/app/src/main/res/layout/recycler_main_page.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="@dimen/_10sdp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text=""
+    android:text="@string/name"
     android:textSize="@dimen/_20sdp"
     android:textAlignment="viewStart"
 
@@ -25,7 +25,7 @@
     <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text=""
+    android:text="@string/semester"
     android:textSize="@dimen/_18sdp"
     android:textAlignment="viewStart"
     android:textColor="@color/black"
@@ -37,7 +37,7 @@
     <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text=""
+    android:text="@string/ogpa_total_ogpa"
     android:textSize="@dimen/_18sdp"
     android:textAlignment="viewStart"
     android:textColor="@color/black"
