--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -207,6 +207,21 @@
                         android:text="@string/agree_to_terms_and_condition"
                         android:textColor="@color/black"
                         />
+                    <TextView
+                        android:theme="@style/font_regular"
+                        style="@style/font_regular"
+                        android:id="@+id/Privacy_policy"
+                        android:layout_width="match_parent"
+                        android:textAlignment="center"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:layout_marginLeft="@dimen/_25sdp"
+                        android:layout_marginRight="@dimen/_25sdp"
+                        android:textSize="@dimen/_15sdp"
+                        android:text="@string/Privacy_policy"
+                        android:textColor="@color/black"
+                        />
                     <androidx.appcompat.widget.AppCompatButton
                         android:theme="@style/font_bold"
                         style="@style/font_bold"
@@ -220,7 +235,6 @@
                         android:textSize="@dimen/_18sdp"
                         android:textColor="@color/white" />
                     <androidx.appcompat.widget.AppCompatButton
-
                         android:theme="@style/font_regular"
                         style="@style/font_regular"
                         android:id="@+id/already_have_an_account_sign_up_page"
