main menu changed

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item app:showAsAction="withText" android:title="@string/change_language" android:id="@+id/change_language" android:icon="@drawable/internet"/>
     <item app:showAsAction="withText" android:title="@string/contact_owner" android:id="@+id/contact_owner" android:icon="@drawable/connection"/>
     <item app:showAsAction="withText" android:title="@string/logout" android:id="@+id/logout" android:icon="@drawable/logout"/>
     <item app:showAsAction="withText" android:title="@string/report_error" android:id="@+id/report_error" android:icon="@drawable/problem"/>
+    <item app:showAsAction="withText" android:title="@string/topper_tips" android:id="@+id/refresh" android:icon="@drawable/reload"/>
 </menu>
