--- a/app/src/main/res/layout/fragment_graph__o_g_p_a__horticulture__btech__agriculture.xml
+++ b/app/src/main/res/layout/fragment_graph__o_g_p_a__horticulture__btech__agriculture.xml
@@ -7,11 +7,40 @@
     android:layout_height="match_parent"
 
     tools:context=".frags.Graph_OGPA_Horticulture_Btech_Agriculture">
-    <com.jjoe64.graphview.GraphView
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_300sdp"
-        android:id="@+id/graph_frag_bsc_agriculture" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_10sdp"
+                        style="@style/font_semi_bold"
+                        android:rotation="-90"
+                        android:theme="@style/font_semi_bold"
+                        android:text="@string/ogpa"/>
+                            <com.jjoe64.graphview.GraphView
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_300sdp"
+                                android:id="@+id/graph_frag_bsc_agriculture" />
+                </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/black"
+                style="@style/font_semi_bold"
+                android:theme="@style/font_semi_bold"
+                android:text="@string/Semester"/>
+        </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_gravity="center"
         android:layout_margin="@dimen/_10sdp"
