text view and edit text sdp size changed to ssp for letting device and user set its accessibility and size.

--- a/app/src/main/res/layout/activity_loading_page.xml
+++ b/app/src/main/res/layout/activity_loading_page.xml
@@ -38,7 +38,7 @@
                 <TextView
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
-                    android:textSize="@dimen/_16sdp"
+                    android:textSize="@dimen/_16ssp"
                     android:layout_marginLeft="@dimen/_30sdp"
                     android:layout_marginRight="@dimen/_30sdp"
                     android:layout_width="match_parent"
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/sign_up"
                     android:id="@+id/loading_page_sign_up"
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:layout_marginTop="@dimen/_25sdp"
                     android:layout_marginLeft="@dimen/_30sdp"
                     android:layout_marginRight="@dimen/_30sdp"
@@ -70,7 +70,7 @@
                     android:id="@+id/loading_page_login"
                     android:layout_height="wrap_content"
                     android:text="@string/login"
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:layout_marginLeft="@dimen/_30sdp"
                     android:layout_marginRight="@dimen/_30sdp"
                     android:textColor="@color/white"
