--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/login_all_caps_heading"
                     android:textAlignment="center"
-                    android:textSize="@dimen/_28sdp"
+                    android:textSize="@dimen/_28ssp"
                     android:layout_marginTop="@dimen/_40sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textColor="@color/black"/>
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/welcome_back"
                     android:textAlignment="center"
-                    android:textSize="@dimen/_28sdp"
+                    android:textSize="@dimen/_28ssp"
                     android:layout_marginBottom="@dimen/_25sdp"
                     android:textColor="@color/black"/>
             </LinearLayout>
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/login_in_your_account"
                         android:textAlignment="viewStart"
-                        android:textSize="@dimen/_20sdp"
+                        android:textSize="@dimen/_20ssp"
                         android:layout_marginTop="@dimen/_40sdp"
                         android:layout_marginRight="@dimen/_25sdp"
                         android:layout_marginLeft="@dimen/_25sdp"
@@ -76,7 +76,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <EditText
                         android:theme="@style/font_regular"
                         style="@style/font_regular"
@@ -93,7 +93,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <TextView
                         android:theme="@style/font_semi_bold"
                         style="@style/font_semi_bold"
@@ -109,7 +109,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <EditText
                         android:theme="@style/font_regular"
                         style="@style/font_regular"
@@ -126,7 +126,7 @@
                         android:textAlignment="viewStart"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -140,7 +140,7 @@
                         android:theme="@style/font_regular"
                         style="@style/font_regular"
                         android:text="@string/forgot_password"
-                        android:textSize="@dimen/_12sdp"
+                        android:textSize="@dimen/_12ssp"
                         android:textAlignment="center"
                         android:textColor="@color/black" />
                 </LinearLayout>
@@ -157,7 +157,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/_25sdp"
                         android:layout_marginRight="@dimen/_25sdp"
-                        android:textSize="@dimen/_15sdp"
+                        android:textSize="@dimen/_15ssp"
                         android:text="@string/Privacy_policy"
                         android:layout_marginTop="@dimen/_50sdp"
                         android:textColor="@color/black"
@@ -174,7 +174,7 @@
                         android:layout_marginRight="@dimen/_25sdp"
                         android:background="@drawable/less_border_purple"
                         android:text="@string/login"
-                        android:textSize="@dimen/_18sdp"
+                        android:textSize="@dimen/_18ssp"
                         android:textColor="@color/white" />
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/sign_up_at_login_page"
@@ -184,7 +184,7 @@
                         android:text="@string/does_not_have_an_account"
                         android:theme="@style/font_regular"
                         style="@style/font_regular"
-                        android:textSize="@dimen/_12sdp"
+                        android:textSize="@dimen/_12ssp"
                         android:textAlignment="center"
                         android:layout_marginBottom="@dimen/_50sdp"
                         android:textColor="@color/black" />
