--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/sign_up"
                     android:textAlignment="center"
-                    android:textSize="@dimen/_28sdp"
+                    android:textSize="@dimen/_28ssp"
                     android:layout_marginTop="@dimen/_40sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textColor="@color/black"/>
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/create_new_account"
                     android:textAlignment="center"
-                    android:textSize="@dimen/_28sdp"
+                    android:textSize="@dimen/_28ssp"
                     android:layout_marginBottom="@dimen/_25sdp"
                     android:textColor="@color/black"/>
             </LinearLayout>
@@ -63,7 +63,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <EditText
                         android:maxLength="20"
                         android:theme="@style/font_regular"
@@ -82,7 +82,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <TextView
 
                         android:theme="@style/font_semi_bold"
@@ -98,7 +98,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <EditText
 
                         android:theme="@style/font_regular"
@@ -117,7 +117,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <TextView
 
                         android:theme="@style/font_semi_bold"
@@ -133,7 +133,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <EditText
                         android:maxLength="50"
                         android:theme="@style/font_regular"
@@ -152,7 +152,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <TextView
 
                         android:theme="@style/font_semi_bold"
@@ -168,7 +168,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                     <EditText
                         android:maxLength="50"
                         android:theme="@style/font_regular"
@@ -187,7 +187,7 @@
                         android:padding="@dimen/_7sdp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_18ssp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -203,7 +203,7 @@
                         android:layout_marginTop="@dimen/_30sdp"
                         android:layout_marginLeft="@dimen/_25sdp"
                         android:layout_marginRight="@dimen/_25sdp"
-                        android:textSize="@dimen/_10sdp"
+                        android:textSize="@dimen/_10ssp"
                         android:text="@string/agree_to_terms_and_condition"
                         android:textColor="@color/black"
                         />
@@ -218,7 +218,7 @@
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:layout_marginLeft="@dimen/_25sdp"
                         android:layout_marginRight="@dimen/_25sdp"
-                        android:textSize="@dimen/_15sdp"
+                        android:textSize="@dimen/_15ssp"
                         android:text="@string/Privacy_policy"
                         android:textColor="@color/black"
                         />
@@ -232,7 +232,7 @@
                         android:layout_marginRight="@dimen/_25sdp"
                         android:background="@drawable/less_border_purple"
                         android:text="@string/save"
-                        android:textSize="@dimen/_18sdp"
+                        android:textSize="@dimen/_18ssp"
                         android:textColor="@color/white" />
                     <androidx.appcompat.widget.AppCompatButton
                         android:theme="@style/font_regular"
@@ -242,7 +242,7 @@
                         android:layout_height="wrap_content"
                         android:background="@color/white"
                         android:text="@string/already_have_an_account"
-                        android:textSize="@dimen/_12sdp"
+                        android:textSize="@dimen/_12ssp"
                         android:layout_marginBottom="@dimen/_50sdp"
                         android:textAlignment="center"
                         android:textColor="@color/black" />
