--- a/app/src/main/res/layout/change_language.xml
+++ b/app/src/main/res/layout/change_language.xml
@@ -14,7 +14,7 @@
             android:layout_height="match_parent"
             android:id="@+id/checkbox_english"
             android:background="@color/black"
-            android:textSize="@dimen/_25sdp"
+            android:textSize="@dimen/_25ssp"
             android:fontFamily="@font/playfairdisplay_semibold"
             android:checked="false"/>
         <TextView
@@ -23,9 +23,9 @@
             android:layout_height="match_parent"
             android:id="@+id/textview_english"
             android:background="@color/black"
-            android:textSize="@dimen/_25sdp"
+            android:textSize="@dimen/_25ssp"
             android:fontFamily="@font/playfairdisplay_semibold"
-            android:text="English"
+            android:text="@string/english"
             android:textAlignment="viewStart"
             />
     </LinearLayout>
@@ -50,7 +50,7 @@
             android:background="@color/black"
             android:textSize="@dimen/_25sdp"
             android:fontFamily="@font/playfairdisplay_semibold"
-            android:text="हिंदी"
+            android:text="@string/hindi"
             android:textAlignment="viewStart"
             />
     </LinearLayout>
