--- a/app/src/main/res/layout/text_spinner.xml
+++ b/app/src/main/res/layout/text_spinner.xml
@@ -4,7 +4,7 @@
     android:id="@+id/text"
 android:ellipsize="end"
 android:maxLines="1"
-android:textSize="@dimen/_16sdp"
+android:textSize="@dimen/_16ssp"
 
     android:theme="@style/font_regular"
     style="@style/font_regular"
