--- a/app/src/main/res/layout/name_recycler_grapg_view.xml
+++ b/app/src/main/res/layout/name_recycler_grapg_view.xml
@@ -34,7 +34,7 @@
                 android:text=""
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_20sdp"
+                android:textSize="@dimen/_20ssp"
                 tools:ignore="InefficientWeight" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
