--- a/app/src/main/res/layout/recycler_main_page.xml
+++ b/app/src/main/res/layout/recycler_main_page.xml
@@ -10,15 +10,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/name"
-    android:textSize="@dimen/_20sdp"
+    android:textSize="@dimen/_20ssp"
     android:textAlignment="viewStart"
-
     android:theme="@style/font_semi_bold"
     style="@style/font_semi_bold"
     android:textColor="@color/black"
     android:id="@+id/name_recycler"
     android:padding="@dimen/_5sdp"
-    android:singleLine="true"
     android:layout_marginStart="@dimen/_10sdp"
     android:layout_marginEnd="@dimen/_10sdp"
     />
@@ -26,7 +24,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/semester"
-    android:textSize="@dimen/_18sdp"
+    android:textSize="@dimen/_18ssp"
     android:textAlignment="viewStart"
     android:textColor="@color/black"
     android:id="@+id/sem_recycler"
@@ -38,7 +36,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/ogpa_total_ogpa"
-    android:textSize="@dimen/_18sdp"
+    android:textSize="@dimen/_18ssp"
     android:textAlignment="viewStart"
     android:textColor="@color/black"
     android:id="@+id/ogpa_recycler"
