--- a/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
+++ b/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/name"
-        android:textSize="@dimen/_20sdp"
+        android:textSize="@dimen/_20ssp"
         android:textAlignment="viewStart"
         android:theme="@style/font_semi_bold"
         style="@style/font_semi_bold"
@@ -28,7 +28,7 @@
         android:text="@string/passing_year"
         android:theme="@style/font_regular"
         style="@style/font_regular"
-        android:textSize="@dimen/_14sdp"
+        android:textSize="@dimen/_14ssp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:id="@+id/topper_tips_passing_year"
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/college_name"
-        android:textSize="@dimen/_14sdp"
+        android:textSize="@dimen/_14ssp"
         android:textAlignment="viewStart"
         android:theme="@style/font_regular"
         style="@style/font_regular"
@@ -56,7 +56,7 @@
         android:text="@string/message"
         android:theme="@style/font_semi_bold"
         style="@style/font_semi_bold"
-        android:textSize="@dimen/_18sdp"
+        android:textSize="@dimen/_18ssp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:id="@+id/topper_tips_message"
