text view and edit text sdp size changed to ssp for letting device and user set its accessibility and size

--- a/app/src/main/res/layout/activity_ogpa_calculator.xml
+++ b/app/src/main/res/layout/activity_ogpa_calculator.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/linear1"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_20ssp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@drawable/less_border_blue"
                 android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -63,7 +63,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_1"
@@ -83,7 +83,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_1"
@@ -108,7 +108,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -129,7 +129,7 @@
                     style="@style/font_regular"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_2"
@@ -148,7 +148,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_2"
@@ -173,7 +173,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -194,7 +194,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_3"
@@ -213,7 +213,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_3"
@@ -238,7 +238,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -258,7 +258,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
@@ -278,7 +278,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_4"
@@ -303,7 +303,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -324,7 +324,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_5"
@@ -343,7 +343,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_5"
@@ -368,7 +368,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -389,7 +389,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_6"
@@ -408,7 +408,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_6"
@@ -433,7 +433,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -454,7 +454,7 @@
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_7"
@@ -473,7 +473,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_7"
@@ -498,7 +498,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -519,7 +519,7 @@
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_8"
@@ -538,7 +538,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_8"
@@ -563,7 +563,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -584,7 +584,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_9"
@@ -603,7 +603,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_9"
@@ -628,7 +628,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -649,7 +649,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_10"
@@ -668,7 +668,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_10"
@@ -693,7 +693,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -714,7 +714,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_11"
@@ -733,7 +733,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_11"
@@ -752,7 +752,7 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_20ssp"
                 android:background="@drawable/less_border_blue"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
@@ -761,7 +761,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -782,7 +782,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_12"
@@ -801,7 +801,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_12"
