--- a/app/src/main/res/layout/activity_btech_agriculture_bsc_horticulture_ogpa_calculator.xml
+++ b/app/src/main/res/layout/activity_btech_agriculture_bsc_horticulture_ogpa_calculator.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/linear1"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_20ssp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@drawable/less_border_blue"
                 android:layout_height="wrap_content"
@@ -44,7 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -64,7 +64,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_1"
@@ -84,7 +84,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_1"
@@ -109,7 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -130,7 +130,7 @@
                     style="@style/font_regular"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_2"
@@ -149,7 +149,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_2"
@@ -174,7 +174,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -195,7 +195,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_3"
@@ -214,7 +214,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_3"
@@ -239,7 +239,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -259,7 +259,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
@@ -279,7 +279,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_4"
@@ -304,7 +304,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -325,7 +325,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_5"
@@ -344,7 +344,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_5"
@@ -369,7 +369,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -390,7 +390,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_6"
@@ -409,7 +409,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_6"
@@ -434,7 +434,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -455,7 +455,7 @@
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_7"
@@ -474,7 +474,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_7"
@@ -499,7 +499,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -520,7 +520,7 @@
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_8"
@@ -539,7 +539,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_8"
@@ -564,7 +564,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -585,7 +585,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_9"
@@ -604,7 +604,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_9"
@@ -629,7 +629,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -650,7 +650,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_10"
@@ -669,7 +669,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_10"
@@ -694,7 +694,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -715,7 +715,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_11"
@@ -734,7 +734,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_11"
@@ -753,7 +753,7 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_20ssp"
                 android:background="@drawable/less_border_blue"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
@@ -762,7 +762,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="@dimen/_20sdp"
+                    android:textSize="@dimen/_20ssp"
                     android:textAlignment="viewStart"
                     android:theme="@style/font_semi_bold"
                     style="@style/font_semi_bold"
@@ -783,7 +783,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_theory_marks_name_12"
@@ -802,7 +802,7 @@
                     android:theme="@style/font_regular"
                     style="@style/font_regular"
                     android:inputType="numberDecimal"
-                    android:textSize="@dimen/_18sdp"
+                    android:textSize="@dimen/_18ssp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
                     android:id="@+id/subject_practical_marks_name_12"
