updated apk and aab

--- a/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
+++ b/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
@@ -52,8 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/message"
-        android:theme="@style/font_semi_bold"
-        style="@style/font_semi_bold"
+        android:theme="@style/font_regular"
+        style="@style/font_regular"
         android:textSize="@dimen/_18ssp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
