Added first splash screen as FirstLoadingPage and second signup and login page as SecondLoadingPage, also added transparent grade ace icon, gradient blue to white color, invisible and white border button, and no border dark button and new loading animation.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#C1E3FF</color>
     <color name="purple">#00072D</color>
+    <color name="grey">#8C808080</color>
+    <color name="dark_blue">#0B3279</color>
+    <color name="transparent">#00000000</color>
 </resources>
