--- a/app/src/main/res/layout/activity_first_loading_page.xml
+++ b/app/src/main/res/layout/activity_first_loading_page.xml
@@ -25,13 +25,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="OGPA "
+                android:text="@string/ogpa"
                 android:textSize="@dimen/_24ssp"
                 android:textColor="#109795"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Calculator"
+                android:text="@string/calculator"
                 android:textSize="@dimen/_16ssp"
                 android:textColor="#109795"/>
         </LinearLayout>
